--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -38,11 +38,11 @@
                 <small  class="p-error" *ngIf="!frmPerson.controls['userPhone'].valid && frmPerson.controls['userPhone'].touched">phone is required/ /  syntax not ok</small>
             </div>
 
-            <div class="p-field">
+            <!-- <div class="p-field">
                 <label for="name">role</label> <br>
                 <input type="text" pInputText id="role"  formControlName="role"/><br>
                 <small class="p-error" *ngIf="!frmPerson.controls['role'].valid && frmPerson.controls['role'].touched">role is required.</small>
-            </div>
+            </div> -->
         </div>
 
         <!-- <button pButton pRipple label="finish" [disabled]="frmPerson.invalid"  class="p-button-text" (click)="registerUser()"></button> -->
